# AITrader

./: .gitignore  README.md  config.example.toml  pyproject.toml
src/aitrader/: __init__.py  __main__.py  advisory.py  app.py  audit.py  backtest.py  binance_market_data.py  config.py  control_plane.py  execution.py  health.py  hyperliquid_live.py  hyperliquid_market_data.py  indicators.py  live_binance.py  market_data.py  position_manager.py  risk.py  runtime.py  state_machine.py  storage.py  strategy.py  telegram_command_bot.py  telegram_control.py  telegram_notify.py  types.py
tests/: test_advisory.py  test_config.py  test_indicators.py  test_position_manager.py  test_risk_engine.py  test_runtime_auto_settlement.py  test_runtime_reason_format.py  test_state_machine.py  test_storage.py  test_strategy_reasons.py  test_telegram_command_bot.py  test_telegram_control.py  test_telegram_notify.py
