[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "aitrader"
version = "0.1.0"
description = "Conservative Binance USDT-M futures trading bot skeleton with strict risk controls."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]
live = [
  "hyperliquid-python-sdk>=0.18.0",
  "eth-account>=0.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
